--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,16 +1,34 @@
-            * {
-            margin: 0%;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        
-        .container {
-            width: fit-content;
-            height: auto;
-            font-size: 20px;
-            padding: 200px;
-        }
-        
-        body {
-            background-color: rgb(75, 15, 131);
-            color: #fff;
+             * {
+                 margin: 0%;
+                 padding: 0;
+                 box-sizing: border-box;
+             }
+             
+             .container {
+                 width: fit-content;
+                 height: auto;
+                 font-size: 20px;
+                 padding: 200px;
+             }
+             
+             body {
+                 background-color: rgb(75, 15, 131);
+                 color: #fff;
+             }
+             
+             header {
+                 display: flex;
+                 justify-content: center;
+                 flex-direction: column;
+                 align-items: center;
+                 padding: 3rem;
+                 width: 100%;
+                 height: auto;
+             }
+             
+             .header-paragraph {
+                 display: flex;
+                 justify-content: center;
+                 align-items: center;
+                 flex-direction: column;
+             }
