--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,3 +32,18 @@
                  align-items: center;
                  flex-direction: column;
              }
+             
+             .form {
+                 display: block;
+                 background-color: #fff;
+                 color: #000;
+                 width: fit-content;
+                 margin: 0 auto 1.rem auto;
+                 padding: 10px;
+             }
+             
+             .form1 {
+                 display: flex;
+                 justify-content: center;
+                 align-items: center;
+             }
