--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,3 +65,7 @@
                  flex-direction: column;
                  justify-content: space-evenly;
              }
+             
+             #radio-buttons {
+                 margin: 10px;
+             }
