--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,10 +5,10 @@
              }
              
              .container {
-                 width: fit-content;
+                 width: 100%;
                  height: auto;
                  font-size: 20px;
-                 padding: 200px;
+                 padding: 150px;
              }
              
              body {
@@ -37,7 +37,6 @@
                  display: block;
                  background-color: #fff;
                  color: #000;
-                 width: fit-content;
                  margin: 0 auto 1.rem auto;
                  padding: 10px;
              }
@@ -52,11 +51,13 @@
                  display: flex;
                  justify-content: space-around;
                  margin: 10px;
+                 padding: 10px;
              }
              
              .label {
-                 max-width: fit-content;
+                 max-width: 100%;
                  height: auto;
+                 margin: 10px;
              }
              
              .gender {
