--- a/CSS/style.css
+++ b/CSS/style.css
@@ -66,7 +66,7 @@
                  justify-content: space-evenly;
              }
              
-             #radio-buttons {
+             .radio-buttons {
                  margin: 10px;
              }
              
