Style:Add color to submit button

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,6 +72,6 @@
              .submit {
                  background-color: orange;
                  margin-top: 10px;
-                 width: fit-content;
+                 width: 100%;
                  height: auto;
              }
