--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,9 +39,10 @@
       color: #000;
       margin: auto;
       padding: 10px;
+      width: 700px;
   }
   
-  .form1 {
+   .form1 {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -51,8 +52,8 @@
       display: flex;
       justify-content: space-between;
       margin: 10px;
-  }
-  
+  } 
+
   .label {
       max-width: 100%;
       height: auto;
